// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`context-files end-to-end 1`] = `
[
  {
    "content": [
      {
        "text": "<context_update>
These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
File \`poem.txt\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

</context_update>",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`context-files multiple, weird path names 1`] = `
[
  {
    "content": [
      {
        "text": "<context_update>
These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
File \`poem.txt\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

File \`poem 3.txt\`
poem3

</context_update>",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`includes PDF file in context and sends summary in context updates 1`] = `
[
  {
    "content": [
      {
        "text": "<context_update>
These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
PDF Document: context-test.pdf
Pages: 3

Use get-file tool with a pdfPage parameter to access specific pages.
</context_update>",
        "type": "text",
      },
      {
        "text": "read the first page of this file",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`sends update if the file was edited pre-insert 1`] = `
{
  "content": [
    {
      "text": "<context_update>
These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
- \`poem.txt\`
\`\`\`diff
Index: poem.txt
===================================================================
--- poem.txt	previous
+++ poem.txt	current
@@ -1,3 +1,3 @@
-Moonlight whispers through the trees,
+changed first line
 Silver shadows dance with ease.
 Stars above like diamonds bright,

\`\`\`
</context_update>",
      "type": "context_update",
    },
    {
      "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
      "type": "system_reminder",
    },
  ],
  "role": "user",
}
`;
